page: Sort groups in numeric mode when loading page data

Otherwise we end up with things like `row-10` becoming the second row
because of lexical ordering.

BUG: 506154